# adsbee

./: .gitignore  .gitmodules  FORK_NOTES.md  GC9A01-WIRING.md  README.md  SETUP.sh  THIRD_PARTY_NOTICES.md  justfile
.github/workflows/: release.yml
ci/test_usb_and_ota_flash/: at_probe.py  reboot_to_bootloader.py  requirements.txt
firmware/: .gitignore  AGENTS.md  README.md
firmware/adsbee_1090/: build.sh
firmware/adsbee_1090/esp/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
firmware/adsbee_1090/esp/main/: CMakeLists.txt  app_main.cpp  bsp.hh  idf_component.yml  simulation.cpp  simulation.hh
firmware/adsbee_1090/esp/main/comms/: comms_ethernet.cpp
firmware/adsbee_1090/esp/main/peripherals/display/: airport_data.hh  display.cpp  display.hh  large_airports.hh  large_airports_data.cpp  lgfx_config.hpp  medium_airports.hh  medium_airports_data.cpp  radar_view.cpp  radar_view.hh  small_airports.hh  small_airports_data.cpp
firmware/adsbee_1090/esp/main/server/: adsbee_server.cpp
firmware/adsbee_1090/pico/: CMakeLists.txt
firmware/adsbee_1090/pico/application/: main.cc
firmware/adsbee_1090/pico/application/comms/: comms.hh
firmware/adsbee_1090/pico/application/comms/at/: comms_at.cc
firmware/common/coprocessor/: object_dictionary.cpp
firmware/common/settings/: settings.cpp  settings.hh
firmware/scripts/: build_airports.py  detect_adsbee_port.sh  flash.sh  gen_splash_image.py  monitor_auto.sh  self_test.sh  setup_dev.sh  sync_upstream.sh  tag_release.sh
firmware/scripts/udev/: 99-adsbee.rules
